--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Maps/Main.Main
 EditorStartupMap=/Game/Maps/Main.Main
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GameInstanceClass=/Script/PingPong.PingPongGameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
