final steps for game build

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,8 +2,21 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=504E3EFD457D51BCB08D23AF927056E3
 CopyrightNotice=All rights by IsGris
+Description=Simple ping pong game
+ProjectName=PingPong
+CompanyName=IsGris
+CompanyDistinguishedName=IsGris
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "FD8BC56C47AD9F22E7CE66A2DE29ACE3", "PingPong")
+bUseBorderlessWindow=True
+bAllowWindowResize=False
+bAllowMaximize=False
+bAllowMinimize=False
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+FullRebuild=True
 
